# apex-infinite-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.ollama.gpu.yml  docker-compose.ollama.yml  pyproject.toml  requirements-dev.txt  requirements-wrapper.txt  requirements.txt
.github/workflows/: quality.yml  security-scan.yml
.spec_system/: CONSIDERATIONS.md  CONVENTIONS.md  SECURITY-COMPLIANCE.md  docs-audit.md  state.json
.spec_system/PRD/: PRD.md
.spec_system/PRD/phase_01/: PRD_phase_01.md  platform_smoke_run_report_2026_07_03.md  session_02_provider_event_stream_contract.md  session_04_output_observability_polish.md
.spec_system/archive/PRD/: PRD_UX-backup-20260702-213102.md  (+1 more)
docs/: ARCHITECTURE.md  CONSIDERATIONS.md  CONVENTIONS.md  PRD.md  PRD_UX.md  SECURITY-COMPLIANCE.md  clean-room-audit.md  compatibility-fixes.md  deployment.md  development.md  docs-audit.md  environments.md  event-stream.md  history-db.md  onboarding.md  operator-runbook.md  prompt-contract.md  release-verification.md  terminal-install.md  troubleshooting.md  visual-wrapper-boundary.md  visual-wrapper-productization.md  visual-wrapper-spike.md
docs/adr/: 0000-template.md  0001-release-scope-decisions.md
docs/ongoing-projects/: revolutionary-linux-terminal-design-plan.md  revolutionary-linux-terminal-remaining-work.md  terminal-and-linux-app-productization-plan.md
docs/runbooks/: incident-response.md
docs/transcripts/: README_transcripts.md  dry-run-plain.txt  history-ledger.txt  machine-output-events.jsonl
packaging/: NOTICES.md  RELEASE-CHECKLIST.md
scripts/: build-appimage.sh  build-shaders.sh  check-ollama.sh  deploy-ollama.sh  ollama-docker.sh  run-production.sh  run-visual.sh  visual_screenshot_smoke.py
src/apex_infinite/: __init__.py  __main__.py  cli.py  config.yaml  config_resolution.py  doctor.py  events.py  logging_config.py  privacy.py  production_config.py  setup_config.py  ui.py
src/apex_infinite_visual/: __init__.py  __main__.py  doctor.py  events.py  launcher.py  main.py  profile_store.py  render_caps.py  settings.py  visual_state.py
src/apex_infinite_visual/assets/: __init__.py  (+2 more)
tests/: conftest.py  test_cli_options.py  test_config_resolution.py  test_event_stream.py  test_history_rendering.py  test_hyperterminal_bridge.py  test_live_ollama.py  test_logging_config.py  test_operator_console.py  test_privacy_and_retention.py  test_production_launcher.py  test_profile_store.py  test_prompts.py  test_provider_preflight.py  test_render_caps_and_doctor.py  test_renderer.py  test_setup_command.py  test_subprocess_execution.py  test_terminal_doctor.py  test_ui_config.py  test_visual_assets.py  test_visual_smoke.py  test_visual_state.py  test_visual_wrapper_productization.py  test_visual_wrapper_spike.py
(+173 files in other folders)
