[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-infinite-cli"
version = "2.0.18"
description = "Autonomous Codex CLI session manager for Apex Spec workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Apex" },
]
keywords = ["codex", "cli", "automation", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.3.1",
    "openai>=2.26.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "build>=1.2",
    "mypy>=1.19",
    "pip-audit>=2.10.1",
    "pylint>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]
visual = [
    "PySide6>=6.11.1",
    "Nuitka>=4.1.3",
]

[project.scripts]
apex-infinite = "apex_infinite.cli:main"
apex-infinite-visual = "apex_infinite_visual.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apex_infinite = ["config.yaml"]
apex_infinite_visual = [
    "qml/*.qml",
    "qml/shell/*.qml",
    "qml/controls/*.qml",
    "qml/effects/*.qml",
    "shaders/*.frag",
    "shaders/*.vert",
    "shaders/PROVENANCE.md",
]
"apex_infinite_visual.assets" = [
    "*.svg",
    "*.desktop",
    "*.xml",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pylint.main]
ignore-patterns = ["test_.*"]

[tool.pylint."messages control"]
disable = [
    "C0114",
    "C0115",
    "C0301",
    "R0801",
    "R0903",
    "W1203",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 8
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 6

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = "^(tests/|\\.venv/|src/apex_infinite_visual/qml/)"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apex_infinite", "apex_infinite_visual"]
omit = ["tests/*", "test_data/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
